Fix gulp performance issues, fix nav toggle on mobile

--- a/content/themes/dude/sass/navigation/_nav-mobile.scss
+++ b/content/themes/dude/sass/navigation/_nav-mobile.scss
@@ -296,7 +296,6 @@ body:not(.js-nav-active) .nav-primary.is-animatable {
   cursor: pointer;
   position: absolute;
   right: 0;
-  top: 0;
 
   @media (max-width: $responsivenav) {
     right: 2rem;
